# efficient-computing-in-julia

./: .brei_history  .copier-answers.yml  .gitignore  020-getting-started.html  020-getting-started.md  030-julia-basics.html  030-julia-basics.md  040-dispatch-and-types.html  040-dispatch-and-types.md  060-simulating-solar-system.html  060-simulating-solar-system.md  070-pkg.html  080-package-development.html  090-best-practices.html  090-best-practices.md  100-introduction-performance.html  100-introduction-performance.md  110-dos-and-donts.html  110-performance-analysis.html  110-performance-analysis.md  120-allocations.html  120-allocations.md  120-dos-and-donts.html  120-dos-and-donts.md  130-channels-and-do.html  130-value-types-and-ca.html  130-value-types-and-ca.md  140-threads-async-and-tasks.html  140-threads-async-and-tasks.md  145-distributed.html  150-transducers.html  160-cool-libraries.html  170-gpu-programming.html  170-gpu-programming.md  180-cool-libraries.html  180-cool-libraries.md  404.html  CODE_OF_CONDUCT.html  LICENSE.html  Makefile  (+34 more)
.entangled/: filedb.json  tasks.json
docs/: contents.md  gencontents.py  weave_html.json
episodes/: 000-template.md  020-getting-started.md  030-julia-basics.md  040-dispatch-and-types.md  050-arrays-and-broadcasting.md  050-arrays-broadcasting-and-la.md  060-plotting.md  060-simulating-solar-system.md  070-pkg.md  080-package-development.md  090-best-practices-pkg-dev.md  090-best-practices.md  100-introduction-performance.md  110-performance-analysis.md  120-allocations.md  120-dos-and-donts.md  150-transducers.md  (+13 more)
(+67 files in other folders)
